Fix(style) Fixes comboButton alignment issue

--- a/src/styles/unibase/buttons/_comboButton.sass
+++ b/src/styles/unibase/buttons/_comboButton.sass
@@ -38,7 +38,7 @@ button[type=button]
 
 .comboButton_moreList:not(#saveActionMenu)
     @extend %contextMenu
-    top: .7rem
+    top: 1.5rem
     left: 0
     width: 100%
 
